compiler/tests/success/subarrays/arm-m4/stack_ptr.jazz
// spill and unspill of reg ptr

export fn main (reg ptr u32[2] r) -> reg u32 {
  stack ptr u32[2] s;
  reg u32 res;

  s = r; // STR
  r = s; // LDR

  res = r[0];

  return res;
}
