compiler/tests/fail/stack_allocation/x86-64/merge_same_var.jazz
export fn main (reg u64 i) -> reg u64 {
  stack u64[2] s;
  reg ptr u64[1] r;
  reg u64 res;

  s[0] = 0;
  r = s[0:1];
  s[i:1] = r;
  res = s[i];

  return res;
}
